--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/TheodoreGC/website/issues"
   },
-  "homepage": "https://github.com/TheodoreGC/website#readme"
+  "homepage": "https://github.com/TheodoreGC/website#readme",
+  "devDependencies": {
+    "cz-conventional-changelog": "^3.3.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
