feat: add first iteration of the website
- Add markdown-wasm as a plugin to parse markdown files and generate html files,
- Add about page,
- Add content to the homepage,
- Update style of the website,
- Add resume

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://theodoregc.github.io/website",
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
+    "markdown-wasm": "^1.1.2",
     "snowpack": "^3.0.11"
   },
   "config": {
